# nanoRecSys

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  locustfile.py  main.py  pipeline.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
docs/: Benchmark.md  LLM_ranker.md  LLM_ranking.md  LLM_training.ipynb  Operations.md  Reproducibility.md  System_design.md  Training.md  sequential_transformer.ipynb  static_baseline_embeddings.ipynb
frontend/: Dockerfile  ui.py
nanoRecSys/: __init__.py  config.py  train.py
nanoRecSys/data/: __init__.py  build_dataset.py  splits.py
nanoRecSys/eval/: offline_eval.py
nanoRecSys/indexing/: build_embeddings.py
nanoRecSys/models/: ranker.py
nanoRecSys/training/: mine_negatives.py  ranker.py  retrieval.py
nanoRecSys/utils/: utils.py
notebooks/: Benchmark.md  Leave_one_out.ipynb  Training.md  academic_training_LOO.ipynb  nanoRecSys.ipynb  production_training.ipynb  sequential_transformer.ipynb  static_baseline_embeddings.ipynb
scripts/: debug_llm_ranker.py  export_onnx.py  olive_search_user_tower_quant.py  show_user_truth.py  test_API_offline_metrics.py
serving/: Dockerfile  requirements.txt
serving/app/: __init__.py  exceptions.py  faiss_store.py  main.py  redis_cache.py  schemas.py  service.py
src/: config.py
src/data/: build_dataset.py  splits.py
src/eval/: metrics.py  offline_eval.py
src/nanoRecSys/: config.py  train.py
src/nanoRecSys/data/: build_dataset.py  datasets.py  splits.py
src/nanoRecSys/eval/: ablation.py  eval_llm_rankers.py  metrics.py  offline_eval.py
src/nanoRecSys/indexing/: benchmark_ivfpq.py  benchmark_synthetic.py  build_embeddings.py  build_faiss_flat.py  build_faiss_ivfpq.py  synthetic_expand.py
src/nanoRecSys/models/: __init__.py  layers.py  llm_ranker.py  losses.py  ranker.py  towers.py
src/nanoRecSys/training/: __init__.py  mine_negatives.py  mine_negatives_sasrec.py  ranker.py  retrieval.py  train_llm_ranker.py
src/nanoRecSys/utils/: logging_config.py  prompt_utils.py  utils.py
tests/: conftest.py  test_api.py  test_components_unit.py  test_data_integrity.py  test_metrics.py  test_ranker_real_data.py
